@@ -6,6 +6,7 @@
   * Update -R parser to allow a stack larger than 2 elements. (Now you can do "A B && X Y && &&" or "A B X Y && && &&", previously you would need to do "A B && X && Y &&")
   * Added age keyword to -R expressions. (Ex: -R "age 5days12h <" to choose articles less than 5 and a half days old.)
   * Error on non-option command line args rather than ignoring them.  To place comments in listfiles, use # as the first char on a line, or with preceeding whitespace and not inside quotes.
+  * Optimize cache/midinfo parsing a bit.
 
 2002-06-17 v0.19.1:
   * Print error message rather than segv on flush without specifying a group first. (Reported by Christian Marillat)
